# Search_Server

./: .gitignore  CMakeLists.txt  README.md  readme.txt
.json/: answers.json  config.json  requests.json
data_base/: file002.txt  file003.txt  file004.txt
data_base/testCJ_2/: file004.txt
data_base/testCJ_3/: file001.txt
data_base/test_sS_1/: file001.txt
data_base/test_sS_2/: file001.txt
include/: ConvertJson.h  ImplSearchClasses.h  InvertedIndex.h  SearchServer.h  search_except.h
src/: CMakeLists.txt  ConvertJson.cpp  ImplSearchClasses.cpp  InvertedIndex.cpp  MainWindow.h  SearchServer.cpp  UI.ui  main.cpp  search_except.cpp
tests/: CMakeLists.txt
tests/InvertedIndex_tests/: CMakeLists.txt  Inverted_Index_Basic_Test_1.cpp  Inverted_Index_Basic_Test_2.cpp  Inverted_Index_Missing_Word_Test.cpp  iI_test_1.cpp  iI_test_2.cpp  iI_test_3.cpp
tests/InvertedIndex_tests/iI_test_1/: CMakeLists.txt  main.cpp
tests/InvertedIndex_tests/iI_test_2/: CMakeLists.txt  main.cpp
tests/InvertedIndex_tests/iI_test_3/: CMakeLists.txt  main.cpp
tests/SearchServer_tests/: CMakeLists.txt  Search_Server_Simple_Test.cpp  Search_Server_Top_5_Test.cpp  sS_test_1.cpp  sS_test_2.cpp
tests/SearchServer_tests/sS_test_1/: CMakeLists.txt  main.cpp
tests/SearchServer_tests/sS_test_2/: CMakeLists.txt  main.cpp
tests/SearchServer_tests/untitled/: CMakeLists.txt
